--- a/app/styles.css
+++ b/app/styles.css
@@ -11,3 +11,94 @@ body {
   -webkit-font-smoothing: antialiased !important;
 }
 
+input, button {
+  outline: 0;
+}
+
+.content {
+  max-width: 1170px;
+  margin: 0 auto;
+  padding: 0 30px;
+}
+
+header#main-header {
+  height: 46px;
+  background-color: #ffffff;
+
+  box-shadow: 0 1px 1px rgba(0,0,0, .25);
+}
+
+header#main-header .content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 100%;
+}
+
+header#main-header nav ul {
+  display: flex;
+  list-style: none;
+}
+
+header#main-header nav ul li {
+  display: flex;
+  align-items: center;
+
+  font-size: 13px;
+  color: #667580;
+  font-weight: 700;
+  margin-left: 30px;
+}
+
+header#main-header nav ul li:first-child {
+  margin-left: 0;
+}
+
+header#main-header nav ul li img {
+  margin-right: 7px;
+}
+
+header#main-header .side {
+  display: flex;
+  justify-content: space-between;
+}
+
+header#main-header .side input {
+  width: 220px;
+  border: 1px solid #E6ECF0;
+  height: 34px;
+  padding: 0 30px 0 12px;
+  border-radius: 16px;
+  color: #667581;
+  font-size: 12px;
+  background: #F5F8FA url(./img/search.svg) no-repeat 194px center;
+  background-size: 7%;
+}
+
+header#main-header .side .figcaption {
+  height: 34px;
+  width: 35px;
+  border-radius: 50%;
+  border:1px solid #000000;
+  margin: 0 15px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+header#main-header .side button {
+  width: 90px;
+  height: 34px;
+  background-color: #3bb9e3;
+  border: 0;
+  border-radius: 16px;
+  font-size: 14px;
+  font-weight: 700;
+  color: #ffffff;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+}
