--- a/app/styles.css
+++ b/app/styles.css
@@ -26,6 +26,8 @@ header#main-header {
   background-color: #ffffff;
 
   box-shadow: 0 1px 1px rgba(0,0,0, .25);
+  position: relative;
+  z-index: 1;
 }
 
 header#main-header .content {
@@ -101,4 +103,18 @@ header#main-header .side button {
   align-items: center;
   justify-content: center;
   
+}
+
+div.banner {
+  width: 100%;
+  height: 380px;
+  background-color: #3bb9e3;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+div.banner h1 {
+  color: #ffffff;
 }
