--- a/app/styles.css
+++ b/app/styles.css
@@ -118,3 +118,82 @@ div.banner {
 div.banner h1 {
   color: #ffffff;
 }
+
+div.bar {
+  height: 59px;
+  background-color: #ffffff;
+  box-shadow: 0 1px 3px rgba(0,0,0, .25);
+}
+
+div.bar .content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 285px;
+  height: 100%;
+}
+
+div.bar .content ul {
+  display: flex;
+  list-style-type: none;
+  height: 100%;
+}
+
+div.bar .content ul li {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  padding: 0 15px;
+  position: relative;
+}
+
+div.bar .content ul li.active::after {
+  content: '';
+  width: 100%;
+  height: 2px;
+  background-color: #3bb9e3;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+div.bar .content ul li span {
+  color: #667580;
+  font-size: 13px;
+  font-weight: 700;
+}
+
+div.bar .content ul li strong {
+  color: #667580;
+  font-size: 18px;
+  font-weight: 700;
+  margin-top: 2px;
+}
+
+div.bar .content ul li.active strong {
+  color: #3bb9e3;
+}
+
+div.bar .content .actions {
+  display: flex;
+}
+
+div.bar .content .actions button {
+  height: 34px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 90px;
+  font-weight: bold;
+  font-size: 14px;
+  color: #3bb9e3;
+  border: 1px solid #3bb9e3;
+  background-color: transparent;
+  border-radius: 16px;
+
+  margin-right: 12px;
+}
